deploiement de l'app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://dev634.github.io/seven-fallen-app",
+  "homepage": "https://test-seven.site",
   "name": "seven-fallen-app",
   "version": "0.1.0",
   "private": true,
