--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "nodemon:start": "nodemon -e css,js --watch src  --watch src/components --exec \"npm run build\"",
-    "commit": "git commit -m\"creation de la navbar\"",
     "start": "react-scripts start",
-    "build": "react-scripts build && git add . && npm run commit && git push origin main",
+    "build": "react-scripts build && git add .",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
