--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^3.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "save": "^2.4.0",
