--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && git add . && git commit --amend --no-edit && git push -f origin main",
+    "build": "react-scripts build && git add .",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
