--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
