--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "i18next": "^20.3.5",
     "immer": "^8.0.1",
     "pg": "^8.5.1",
     "react": "^17.0.1",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-i18next": "^11.11.4",
     "react-icons": "^4.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.6.0",
