--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "i18next": "^20.3.5",
     "immer": "^8.0.1",
+    "npm-watch": "^0.11.0",
     "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-dev-utils": "^11.0.4",
@@ -25,7 +26,17 @@
     "save": "^2.4.0",
     "web-vitals": "^0.2.4"
   },
+  "watch" : {
+    "build" : {
+      "patterns" : ["src"],
+      "extensions" : "js,jsx,css,html",
+      "delay": 2000,
+      "clearBuffer": true,
+      "ignore": "node_modules"
+    }
+  },
   "scripts": {
+    "watch_build" : "npm-watch build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
