--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "axios": "^0.21.1",
+    "chart.js": "^3.6.0",
     "i18next": "^20.4.0",
     "immer": "^9.0.5",
     "lodash": "^4.17.21",
     "npm-watch": "^0.11.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.3.0",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.11.4",
     "react-icons": "^4.2.0",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-query": "^3.21.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "save": "^2.4.0",
